--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -1,12 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Users home</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Cars REST API</title>
+  </head>
+  <body>
+
+    {% block content %}
+    <div class="container position-relative">
+      <div class="row text-center align-items-center" style="min-height: 100vh;">
+        <div>
+          {% if request.user.is_authenticated %}
+          <div>
+            <h1 class="display-3">Browse the <b>REST API</b></h1>
+            <a class="btn btn-success px-4 " href="/api">API</a>
+          </div>
+          {% else %}
+            <h1 class="display-3 my-3">Cars REST API</h1>
+            <div class="d-flex justify-content-center">
+              <a class="btn btn-primary mx-2" href="{% url 'login' %}">Login</a>
+              <a class="btn btn-primary mx-2" href="{% url 'register' %}">Register</a>
+            </div>
+          {% endif %}
+        </div>
+      </div>
+      {% if request.user.is_authenticated %}
+        <div class="d-flex align-items-center position-absolute" style="bottom: 10px; right: 10px;">
+          <p class="mb-0 mx-2">You're logged in as <b>{{ request.user.username }}</b></p>
+          <a class="btn btn-danger py-1" href="{% url 'logout' %}">Logout</a>
+        </div>
+      {% endif %}
+    </div>
+    {% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
 </html>
